refs 项目启动配置修改

--- a/jantd-boot/jantd-boot-module-system/src/main/resources/templates/jantd_config.properties
+++ b/jantd-boot/jantd-boot-module-system/src/main/resources/templates/jantd_config.properties
@@ -10,10 +10,10 @@ source_root_package=/src/main/java
 
 #mysql
 diver_name=com.mysql.jdbc.Driver
-url=jdbc:mysql://119.57.73.147:3306/jantd-boot?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://119.57.73.147:3306/jantd-eval?useUnicode=true&characterEncoding=UTF-8
 username=evaluation
 password=lwq@mysql_Eval_123456
-database_name=jantd-boot
+database_name=jantd-eval
 
 #page_filter_fields
 page_filter_fields=createTime,createBy,updateTime,updateBy
